--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html>
-<h1> Sobre a Barbearia Alura</h1>
-
-<p>Localizada no coração da cidade <strong> Barbearia Alura </strong>traz para o mercado o que há de melhor para o seu cabelo e barba.</p>
-<p> Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
-
-<p>Nossa missão é:<strong><em>"Proporcionar auto-estima e qualidade de vida aos clientes"</em></strong>.</p>
-
-<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda.</p>
-<p>O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+<html lang="pt-br">
+    <head>
+        <meta charset="UTF-8>
+        <titles>barbearia Alura</titles>
+    </head>
+    <body>
+        <h1> Sobre a Barbearia Alura</h1>
+        <p>Localizada no coração da cidade <strong> Barbearia Alura </strong>traz para o mercado o que há de melhor para o seu cabelo e barba.</p>
+        <p> Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+        <p>Nossa missão é:<strong><em>"Proporcionar auto-estima e qualidade de vida aos clientes"</em></strong>.</p>
+        <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. 
+        O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+    </body>
 </html>
