--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <meta charset="UTF-8>
-        <titles>barbearia Alura</titles>
+        <meta charset="UTF-8">
+        <title>barbearia Alura</title>
     </head>
     <body>
         <h1> Sobre a Barbearia Alura</h1>
